--- a/templates/login.html
+++ b/templates/login.html
@@ -2,8 +2,8 @@
 {% block content %}
 <body>
 <form action="/login" method="post">
-<input type="text" value="username" name="username" />
-<input type="text" value="password" name="password" />
+<input type="text" placeholder="username" name="username" />
+<input type="password" placeholder="password" name="password" />
 <input type="submit" />
 </form>
 {% endblock %}
